--- a/config.toml
+++ b/config.toml
@@ -1,19 +1,19 @@
 baseURL = "/"
 languageCode = "en-US"
 defaultContentLanguage = "en"
-title = "Orientation"
+title = "Dot-Com-Munity"
 theme = "teach"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
 [params]
-	editURL = "https://github.com/killermann/sjmd-course-orientation/tree/master/content/"
+	editURL = "https://github.com/killermann/dotcommunity/tree/master/content/"
 	helpURL = "https://sjmd.space/help"
 	description = "Social Justice, Minus Dogma Course + Community"
-	author = "Sam Killermann"
+	author = "SJMD"
 	showVisitedLinks = true
 	disableBreadcrumb = false
 	disableNextPrev = false
-	themeVariant = ""
+	themeVariant = "red"
 
 [outputs]
 	home = [ "HTML", "RSS", "JSON"]
