--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
 
 [context.deploy-preview.environment]
 	HUGO_VERSION = "0.55.6"
+
+[[redirects]]
+	from = "https://sjmd-course-dotcommunity.netlify.com/*"
+	to = "https://dotcommunity.course.sjmd.space/:splat"
+	status = 301
+	force = true #COMMENT: ensure that we always redirect
